Style button and info text

--- a/form.html
+++ b/form.html
@@ -25,8 +25,8 @@
 
     <div class="form_container">
       <div class="info_text_container">
-        This is not a real online service, but you know you need something like this to ensure that your lovely 
-        little puppy lives a healthy and happy life.
+        <p>This is not a real online service, but you know you need something like this to ensure that your lovely 
+        little puppy lives a healthy and happy life.</p>
         <p>Sign up <span class="italic">now</span> to get started.</p>
         <p>We <span class="italic">know</span> what's best for your fluffy friend!</p>
       </div>
@@ -84,7 +84,7 @@
 
       <div class="action_container">
         <button id="submit_btn" type="submit" form="sign_up_data">Sign up! </button>
-        <span>Already have an account?<a id="login_link" href="login.example">Log in</a></span>
+        <span>Already have an account?<a class="login_link" href="login.example"> Log in</a></span>
       </div>
     </div>
   </div>
